Updates to model loading

--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
           <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Product name</h6>
-                <small class="text-muted">Brief description</small>
+                <h6 class="my-0">Brooklin Chair Italia</h6>
+                <small class="text-muted">Large Chair</small>
                 <button class="btn btn-success btn-sm btn-block" type="submit" onclick="window.app.immerse('chair');">Experience ➤</button>
               </div>
               <span class="text-muted">$12</span>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Second product</h6>
-                <small class="text-muted">Brief description</small>
+                <h6 class="my-0">Burger Emperor</h6>
+                <small class="text-muted">Crusty Chicken Burger</small>
+                <button class="btn btn-success btn-sm btn-block" type="submit" onclick="window.app.immerse('burger');">Experience ➤</button>
               </div>
               <span class="text-muted">$8</span>
             </li>
